Fix margins for aligncenter images

--- a/client/src/css/_stream.scss
+++ b/client/src/css/_stream.scss
@@ -132,7 +132,7 @@
 				margin: 0 0 15px 15px;
 			}
 			&.aligncenter {
-				margin: 0 15px 15px 15px;
+				margin: 0 0 15px 0;
 			}
 			&.alignleft {
 				margin: 0 15px 15px 0;
